--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,11 @@
    <application
         android:label="ema"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="True"
+        android.requestLegacyExternalStorage="True"
+        >
+        
         <activity
             android:name=".MainActivity"
             android:exported="true"
